welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: ';' expected but '{' found.
} while(getCouleurSol()=yellow){
                               ^